# aydar_akhmetov

./: .gitignore  pyproject.toml  readme.md
.dvc/: config
.github/workflows/: ci-homework.yml
ml_project/: predict.py  train_pipeline.py
ml_project/conf/: config.yaml  schema.py
ml_project/conf/cross_val/: cross_val.yaml
ml_project/conf/download/: download.yaml
ml_project/conf/features/: features.yaml
ml_project/conf/mlflow/: mlflow.yaml
ml_project/conf/model/: catboost.yaml  logreg.yaml
ml_project/conf/paths/: paths.yaml
ml_project/conf/splitting/: splitting.yaml
ml_project/data/: utils.py
ml_project/entities/: params.py
ml_project/features/: custom_transform.py  utils.py
ml_project/models/: utils.py
ml_project/models/artefacts/: metrics.json  model.pkl
notebooks/: eda.ipynb  model.ipynb
tests/: conftest.py  test_end2end_pipeline.py  train_sample.csv
tests/artifacts/: metrics.json  model.pkl
tests/data_utils/: test_data_utils.py
tests/feature_utils/: test_custom_transform.py
tests/model_utils/: test_model_utils.py
